[project]
requires-python = "==3.13.*"
name = "cancer"
description = "Cures cancer"
version = "1.0.0"
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "bs-config [dotenv] ==1.1.1",
    "bs-nats-updater ==2.0.4",
    "click >=8.1.3, <9.0.0",
    "httpx ==0.28.*",
    "nats-py[nkeys] ==2.10.0",
    "Pillow >=11.0.0, <12.0.0",
    "python-telegram-bot ==22.3",
    "sentry-sdk >=2.0.0, <3.0.0",
    "uvloop ==0.21.*",
    "yt-dlp [default] ==2025.6.30",
]

[dependency-groups]
dev = [
    "pytest >=8.0.0, <9.0.0",
    "ruff ==0.12.4",
    "types-requests >=2.28.11, <3.0.0",
    "types-Pillow >=10.0.0, <11.0.0",
    "pyright>=1.1.401",
]

[[tool.uv.index]]
name = "internal"
url = "https://pypi.bjoernpetersen.net/simple"
explicit = true

[tool.uv.sources]
bs-config = { index = "internal" }
bs-nats-updater = { index = "internal" }

[build-system]
requires = ["uv_build==0.8.*"]
build-backend = "uv_build"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]
