[project]
requires-python = "==3.13.*"
name = "cancer"
description = "Cures cancer"
version = "1.0.0"
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "bs-config [dotenv] ==1.1.2",
    "bs-nats-updater ==2.0.7",
    "click >=8.1.3, <9.0.0",
    "httpx ==0.28.*",
    "nats-py ==2.11.0",
    "Pillow >=11.0.0, <12.0.0",
    "python-telegram-bot ==22.5",
    "sentry-sdk >=2.0.0, <3.0.0",
    "uvloop ==0.21.*",
    "yt-dlp [default]==2025.9.26",
]

[dependency-groups]
dev = [
    "mypy==1.18.*",
    "pytest >=8.0.0, <9.0.0",
    "ruff ==0.14.0",
    "types-requests >=2.28.11, <3.0.0",
    "types-Pillow >=10.0.0, <11.0.0",
    "types-yt-dlp==2025.9.26.*",
]

[[tool.uv.index]]
name = "internal"
url = "https://pypi.bjoernpetersen.net/simple"
explicit = true

[tool.uv.sources]
bs-config = { index = "internal" }
bs-nats-updater = { index = "internal" }

[build-system]
requires = ["uv_build==0.9.*"]
build-backend = "uv_build"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]
