[project]
requires-python = "==3.14.*"
name = "cancer"
description = "Cures cancer"
version = "1.0.0"
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "bs-config [dotenv] ==3.4.0",
    "bs-nats-updater ==3.0.0",
    "click >=8, <9",
    "httpx ==0.28.*",
    "nats-py ==2.12.0",
    "Pillow ==12.0.*",
    "python-telegram-bot ==22.5",
    "sentry-sdk >=2, <3",
    "uvloop ==0.22.*",
    "yt-dlp [default]==2025.12.8",
]

[dependency-groups]
dev = [
    "mypy==1.19.*",
    "pytest ==9.0.*",
    "ruff ==0.14.10",
    "types-requests >=2.28.11, <3.0.0",
    "types-Pillow ==10.2.*",
    "types-yt-dlp==2025.12.8.*",
]

[[tool.uv.index]]
name = "internal"
url = "https://pypi.bjoernpetersen.net/simple"
explicit = true

[tool.uv.sources]
bs-config = { index = "internal" }
bs-nats-updater = { index = "internal" }

[build-system]
requires = ["uv_build==0.9.*"]
build-backend = "uv_build"

[tool.pytest]
strict = true
addopts = [
    "--import-mode=importlib",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]
